--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,6 +9,7 @@ body{
 	padding:0;
 	background:#fff;
 	font-family: 'Open Sans', sans-serif;
+	background-image : url("/lg.jpg");
  }
 h1,h2,h3,h4,h5,h6{
 	margin:0;	
